[package]
name = "nulled_auth"
version = "0.1.0"
edition = "2021"
author = "xefer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
whoami = "1.2.1"
sysinfo = "0.23.9"
winreg = "0.10.1"
sha2 = "0.10.1"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }

